Ready for viewing

--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -88,7 +88,7 @@ hr
     border-bottom: 1px solid #f6f6f6
 
 a
-  color: #f16529
+  color: #065185
 
 .input string optional
   max-width: 97%
@@ -229,7 +229,7 @@ header
   margin-top: 3px
   margin-bottom: -3px
   span
-    color: #f16529
+    color: #065185
   i
     margin-top: -10px
     margin-right: 3px
@@ -245,7 +245,7 @@ header
     line-height: 68px
     margin-left: 10px
   span
-    color: #f16529
+    color: #065185
 
 #social-links
   margin-top: 20px
@@ -283,28 +283,28 @@ header
       -ms-transition: all 0.3s ease-in-out
       transition: all 0.3s ease-in-out
       &:focus, &:hover
-        border-top: 4px solid #f16529 !important
-        background: #f16529 !important
+        border-top: 4px solid #065185 !important
+        background: #065185 !important
         color: #fff
     .active > a
-      color: #f16529 !important
+      color: #065185 !important
       text-decoration: none
-      border-top: 4px solid #f16529 !important
+      border-top: 4px solid #065185 !important
       background-color: transparent !important
       -webkit-box-shadow: none
       -moz-box-shadow: none
       box-shadow: none
       &:focus
-        color: #f16529 !important
+        color: #065185 !important
         text-decoration: none
-        border-top: 4px solid #f16529 !important
+        border-top: 4px solid #065185 !important
         background-color: transparent !important
         -webkit-box-shadow: none
         -moz-box-shadow: none
         box-shadow: none
       &:hover
-        border-top: 4px solid #f16529 !important
-        background: #f16529 !important
+        border-top: 4px solid #065185 !important
+        background: #065185 !important
         color: #fff !important
         -webkit-box-shadow: none
         -moz-box-shadow: none
@@ -316,25 +316,25 @@ header
 .dropdown-menu li > a
   &:hover, &:focus
     color: #ffffff
-    background: #f16529 !important
+    background: #065185 !important
 
 .dropdown-submenu:hover > a
   color: #ffffff
-  background: #f16529 !important
+  background: #065185 !important
 
 .dropdown-menu .active > a
   color: #ffffff !important
-  background: #f16529 !important
+  background: #065185 !important
   &:hover
     color: #ffffff !important
-    background: #f16529 !important
+    background: #065185 !important
 
 .navbar .btn-navbar
   margin-top: 25px
 
 .nav .active .dropdown-toggle .caret
-  border-top-color: #f16529 !important
-  border-bottom-color: #f16529 !important
+  border-top-color: #065185 !important
+  border-bottom-color: #065185 !important
 
 .slider-wrapper
   position: relative
@@ -596,10 +596,10 @@ html[xmlns] .slides
     background-repeat: no-repeat
     background-position: 48% 50%
     &:hover
-      background-color: #f16529
+      background-color: #065185
       opacity: 1
   .flex-next:hover
-    background-color: #f16529
+    background-color: #065185
     opacity: 1
 
 .subpage .flex-direction-nav a
@@ -670,7 +670,7 @@ html[xmlns] .slides
 
 .hero-unit
   background: #eee
-  border-left: 4px solid #f16529
+  border-left: 4px solid #065185
   padding: 13px 13px 13px 15px
   font-style: italic
   margin: 20px auto
@@ -735,25 +735,25 @@ html[xmlns] .slides
   -webkit-border-radius: 50em
   -moz-border-radius: 50em
   border-radius: 50em
-  -webkit-box-shadow: 0px 0px 0px 3px #f16529
-  -moz-box-shadow: 0px 0px 0px 3px #f16529
-  box-shadow: 0px 0px 0px 3px #f16529
+  -webkit-box-shadow: 0px 0px 0px 3px #065185
+  -moz-box-shadow: 0px 0px 0px 3px #065185
+  box-shadow: 0px 0px 0px 3px #065185
   margin: 0 auto
   opacity: 1
 
 .circle-color-full
-  background-color: #f16529
+  background-color: #065185
   -webkit-border-radius: 50em
   -moz-border-radius: 50em
   border-radius: 50em
-  -webkit-box-shadow: 0px 0px 0px 3px #f16529
-  -moz-box-shadow: 0px 0px 0px 3px #f16529
-  box-shadow: 0px 0px 0px 3px #f16529
+  -webkit-box-shadow: 0px 0px 0px 3px #065185
+  -moz-box-shadow: 0px 0px 0px 3px #065185
+  box-shadow: 0px 0px 0px 3px #065185
   margin: 0 auto
   opacity: 1
 
 .big-color
-  border: 20px solid #f16529 !important
+  border: 20px solid #065185 !important
 
 /* Icon Boxes Vert
  *===================================================================
@@ -891,12 +891,12 @@ input[type="button"]
   &.color
     background: #555
     color: #fff
-    background: #f16529
+    background: #065185
     &:hover
       background: #aaa
 
 input[type="button"]
-  background: #f16529
+  background: #065185
   color: #fff
 
 /* Alert Boxes
@@ -998,12 +998,12 @@ input[type="button"]
 
 .mr-rotato-prev:hover
   background: url(image_path('testimonials-left-02.png')) no-repeat 50%
-  background-color: #f16529
-  border-color: #f16529
+  background-color: #065185
+  border-color: #065185
 
 .mr-rotato-next:hover
-  background-color: #f16529
-  border-color: #f16529
+  background-color: #065185
+  border-color: #065185
 
 /* Tabs
  *===================================================================
@@ -1107,7 +1107,7 @@ input[type="button"]
   overflow: hidden
 
 .meter > span:after, .animate > span > spans li.current
-  background: #f16529
+  background: #065185
 
 /* Quotes
  *===================================================================
@@ -1137,7 +1137,7 @@ input[type="button"]
   text-align: center
 
 .quote, .author
-  background: #f16529
+  background: #065185
 
 /* Dropcaps
  *===================================================================
@@ -1159,7 +1159,7 @@ input[type="button"]
     background: #3a3a3a
     color: #fff
   &.color
-    background: #f16529
+    background: #065185
     color: #fff
 
 /* Clients List
@@ -1508,7 +1508,7 @@ a.buy
   font-size: 20px
 
 .pricing-table .color-custom h4
-  background-color: #f16529
+  background-color: #065185
 
 /* Google Map
  *===================================================================
@@ -1557,13 +1557,13 @@ a.buy
     -ms-transition: all 0.1s ease-in-out
     transition: all 0.1s ease-in-out
     &:hover
-      color: #f16529 !important
-      border-bottom: 1px solid #f16529 !important
+      color: #065185 !important
+      border-bottom: 1px solid #065185 !important
       text-decoration: none
 
 .selected
-  color: #f16529 !important
-  border-bottom: 1px solid #f16529 !important
+  color: #065185 !important
+  border-bottom: 1px solid #065185 !important
   text-decoration: none
 
 /* Posts
@@ -1636,7 +1636,7 @@ a.buy
   .button
     margin-bottom: 30px !important
   strong
-    color: #f16529
+    color: #065185
 
 .launch
   margin-bottom: 30px
@@ -1651,7 +1651,7 @@ a.buy
  *===================================================================
 
 .pagination
-  margin-left: 30px
+  text-align: center
   li
     padding: 5px 10px
     border-top: 1px solid #eee
@@ -1673,8 +1673,8 @@ a.buy
   margin-right: 5px
 
 li.current
-  background: #f16529
-  border: 1px solid #f16529
+  background: #065185
+  border: 1px solid #065185
   color: #fff
 
 /* Widgets
@@ -1714,8 +1714,8 @@ li.current
   &:last-child
     margin-right: 0
   &:hover
-    background: #f16529
-    border: 1px solid #f16529
+    background: #065185
+    border: 1px solid #065185
     color: #fff
 
 /* Isotope Filtering
@@ -1991,7 +1991,7 @@ form#newsletter
       -moz-border-radius-bottomleft: 3px
       border-bottom-left-radius: 3px
     &[type=submit]
-      background: #f16529
+      background: #065185
       color: #fff
       width: 25%
       float: left
@@ -2061,7 +2061,7 @@ form#newsletter
     width: 100%
   a
     &:hover
-      border-color: #f16529
+      border-color: #065185
     float: left
     width: 60px
     height: 60px
@@ -2117,21 +2117,21 @@ form#newsletter
   border-color: rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.25)
 
 .btn-primary
-  background-color: #f16529
+  background-color: #065185
   color: #ffffff
-  background-image: -moz-linear-gradient(top, #f16529, #f16529)
-  background-image: -ms-linear-gradient(top, #f16529, #f16529)
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f16529), to(#f16529))
-  background-image: -webkit-linear-gradient(top, #f16529, #f16529)
-  background-image: -o-linear-gradient(top, #f16529, #f16529)
-  background-image: linear-gradient(top, #f16529, #f16529)
+  background-image: -moz-linear-gradient(top, #065185, #065185)
+  background-image: -ms-linear-gradient(top, #065185, #065185)
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#065185), to(#065185))
+  background-image: -webkit-linear-gradient(top, #065185, #065185)
+  background-image: -o-linear-gradient(top, #065185, #065185)
+  background-image: linear-gradient(top, #065185, #065185)
   background-repeat: repeat-x
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#'f16529, endColorstr='#'f16529, GradientType=0)
-  border-color: #f16529 #f16529 #f16529
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#'065185, endColorstr='#'065185, GradientType=0)
+  border-color: #065185 #065185 #065185
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25)
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false)
   &:hover, &:active, &.active, &.disabled, &[disabled]
-    background-color: #f16529
+    background-color: #065185
   &:active, &.active
     background-color: #003399 \9
 
@@ -2176,19 +2176,19 @@ form#newsletter
 .btn-success
   background-color: #5bb75b
   color: #ffffff
-  background-image: -moz-linear-gradient(top, #f16529, #f16529)
-  background-image: -ms-linear-gradient(top, #f16529, #f16529)
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f16529), to(#f16529))
-  background-image: -webkit-linear-gradient(top, #f16529, #f16529)
-  background-image: -o-linear-gradient(top, #f16529, #f16529)
-  background-image: linear-gradient(top, #f16529, #f16529)
+  background-image: -moz-linear-gradient(top, #065185, #065185)
+  background-image: -ms-linear-gradient(top, #065185, #065185)
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#065185), to(#065185))
+  background-image: -webkit-linear-gradient(top, #065185, #065185)
+  background-image: -o-linear-gradient(top, #065185, #065185)
+  background-image: linear-gradient(top, #065185, #065185)
   background-repeat: repeat-x
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#'f16529, endColorstr='#'f16529, GradientType=0)
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#'065185, endColorstr='#'065185, GradientType=0)
   border-color: #51a351 #51a351 #387038
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25)
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false)
   &:hover, &:active, &.active, &.disabled, &[disabled]
-    background-color: #f16529
+    background-color: #065185
   &:active, &.active
     background-color: #408140 \9
 
