--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,11 +12,10 @@
 			<div class="span9">
 				<div id="footer-menu-links">
 					<ul id="footer-nav">
-						<li><a href="index.html">Start</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="services.html">Services</a></li>
-						<li><a href="pricing.html">Pricing</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="http://www.mastercoin.org/">Start</a></li>
+						<li><a href="http://mastercoin-explorer.com/">Pricing</a></li>
+						<li><a href="http://wiki.mastercoin.org/index.php/Main_Page">About</a></li>
+						<li><a href="http://www.mastercoin.org/#contact">Contact</a></li>
 					</ul>
 				</div>
 			</div>
