--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -12,7 +12,7 @@
       <div><%= f.label :job_description %><br />
       <%= f.text_field :job_description %></div>
 
-      <div><%= f.label :description, maxlength: 350 %><br />
+      <div><%= f.label :description %><br />
       <%= f.text_field :description %></div>
 
       <div><%= f.label :linked_in %><i>(Enter your public profile URL)</i><br />
