--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,7 +21,7 @@
 	    			<% unless user.image_file_name == nil %>
 							<div class="span4_image">
 								<%= image_tag user.image.url(:thumb) %><br>
-								<% unless user.linked_in == nil %>
+								<% unless user.linked_in == "" %>
 								<script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
 								<script type="IN/MemberProfile" data-id=<%= user.linked_in %> data-format="hover"></script>
 								<% else %>
@@ -39,7 +39,7 @@
 						<div class="title">
 							<h6><%= user.job_description %></h6>
 						</div>
-						<p><%= user.description %></p>
+						<p><%= truncate(user.description, length: 350) %></p>
 						<div class="clear"></div>
 					</div>
 				</div>
