--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,10 +12,11 @@
 			<div class="span9">
 				<div id="footer-menu-links">
 					<ul id="footer-nav">
-						<li><a href="http://www.mastercoin.org/">Start</a></li>
-						<li><a href="http://mastercoin-explorer.com/">Pricing</a></li>
-						<li><a href="http://wiki.mastercoin.org/index.php/Main_Page">About</a></li>
-						<li><a href="http://www.mastercoin.org/#contact">Contact</a></li>
+						<li><a href="http://www.mastercoin.org/">Mastercoin Home</a></li>
+						<li><a href="https://masterchest.info/">MasterChest.info</a></li>
+						<li><a href="http://mastercoin-explorer.com/">Mastercoin-Explorer.com</a></li>
+						<li><a href="http://wiki.mastercoin.org/index.php/Main_Page">Mastercoin wiki</a></li>
+						<li><a href="http://www.mastercoin.org/#contact">Contacts</a></li>
 					</ul>
 				</div>
 			</div>
