--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,12 @@
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1&appId=173173886211093";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 <div id="footer">	
 	<div class="container">
 		<div class="row">
@@ -17,8 +26,7 @@
 			<div class="span3">
 				
 				<h3>Latest Tweets</h3>
-				
-				<ul id="twitter"><li><span>18 brilliantly responsive ecommerce sites @<a href="http://twitter.com/CreativeBloQ">CreativeBloQ</a> <a href="http://t.co/5m5ursTyYY">http://t.co/5m5ursTyYY</a> via @<a href="http://twitter.com/BootstrapMaster">BootstrapMaster</a></span> <br><b><a href="http://twitter.com/BootstrapMaster/statuses/400011677711613952">1 day ago</a></b></li><li><span>Responsive web design tips from BBC News @<a href="http://twitter.com/CreativeBloQ">CreativeBloQ</a> <a href="http://t.co/FtpFyzJs9v">http://t.co/FtpFyzJs9v</a> via @<a href="http://twitter.com/BootstrapMaster">BootstrapMaster</a></span> <br><b><a href="http://twitter.com/BootstrapMaster/statuses/400011346600681472">1 day ago</a></b></li></ul>
+			
 
 				<div class="clear"></div>
 				
@@ -48,38 +56,29 @@
 				<h3>Follow Us</h3>
 				
 				<div id="social-r" class="tooltips">
-					<a href="#" rel="tooltip" title="Amazon" class="amazon">Amazon</a>
-					<a href="#" rel="tooltip" title="Behance" class="behance">Behance</a>
-					<a href="#" rel="tooltip" title="Blogger" class="blogger">Blogger</a>
-					<a href="#" rel="tooltip" title="DeviantART" class="deviantart">DeviantART</a>
-					<a href="#" rel="tooltip" title="Dribbble" class="dribbble">Dribbble</a>
-					<a href="#" rel="tooltip" title="Dropbox" class="dropbox">Dropbox</a>
-					<a href="#" rel="tooltip" title="Evernote" class="evernote">Evernote</a>
-					<a href="#" rel="tooltip" title="Facebook" class="facebook">Facebook</a>
-					<a href="#" rel="tooltip" title="Forrst" class="forrst">Forrst</a>
-					<a href="#" rel="tooltip" title="Github" class="github">Github</a>
-					<a href="#" rel="tooltip" title="Google Plus" class="googleplus">Google Plus</a>
-					<a href="#" rel="tooltip" title="Joli Cloud" class="jolicloud">Joli Cloud</a>
-					<a href="#" rel="tooltip" title="Last FM" class="last-fm">Last FM</a>
-					<a href="#" rel="tooltip" title="LinkedIn" class="linkedin">LinkedIn</a>
-					<a href="#" rel="tooltip" title="Picasa" class="picasa">Picasa</a>
-					<a href="#" rel="tooltip" title="Pintrest" class="pintrest">Pintrest</a>
-					<a href="#" rel="tooltip" title="RSS" class="rss">RSS</a>
-					<a href="#" rel="tooltip" title="Skype" class="skype">Skype</a>
-					<a href="#" rel="tooltip" title="Spotify" class="spotify">Spotify</a>
-					<a href="#" rel="tooltip" title="StumpleUpon" class="stumbleupon">StumbleUpon</a>
-					<a href="#" rel="tooltip" title="Tumblr" class="tumblr">Tumblr</a>
-					<a href="#" rel="tooltip" title="Twitter" class="twitter">Twitter</a>
-					<a href="#" rel="tooltip" title="Vimeo" class="vimeo">Vimeo</a>
-					<a href="#" rel="tooltip" title="WordPress" class="wordpress">WordPress</a>
-					<a href="#" rel="tooltip" title="Xing" class="xing">Xing</a>
-					<a href="#" rel="tooltip" title="Yahoo" class="yahoo">Yahoo</a>
-					<a href="#" rel="tooltip" title="YouTube" class="youtube">YouTube</a>
+					<div class="fb-like" data-href="https://www.facebook.com/mastercoinfoundation" data-layout="button" data-action="like" data-show-faces="true" data-share="true">
+					</div>
+					<div id="twitter_button">
+						<a href="https://twitter.com/share" class="twitter-share-button" data-url="https://twitter.com/MSCProtocol">Tweet</a>
+						<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+						</script>
+					</div>
+					<div class="g-plusone" data-annotation="inline" data-width="300">
+					</div>
 				</div>
+
 			</div>			
 		</div>		
 	</div>
 </div>
+
+<script type="text/javascript">
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/platform.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+</script>
 
 <div id="footer-menu" class="hidden-tablet hidden-phone">
 	<div class="container">
