--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,33 +16,33 @@
 	  		<!-- start: Row -->
 	  		<div class="row">
 	  		<% users.collect do |user| %>
-	  		<div class="span4">
-	    		<div class="icons-box box">
-	    			<% unless user.image_file_name == nil %>
-							<div class="span4_image">
-								<%= image_tag user.image.url(:thumb) %><br>
-								<% unless user.linked_in == "" %>
-								<script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-								<script type="IN/MemberProfile" data-id=<%= user.linked_in %> data-format="hover"></script>
-								<% else %>
-									<%= user.linked_in %>
-								<% end %>
+		  		<div class="span4">
+		    		<div class="icons-box box">
+		    			<% if user.image_file_name.present? %>
+								<div class="span4_image">
+									<%= link_to(image_tag(user.image.url(:thumb)), user_path(user)) %><br>
+									<% if user.linked_in.present? %>
+										<script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+										<script type="IN/MemberProfile" data-id=<%= user.linked_in %> data-format="hover"></script>
+									<% else %>
+										<%= user.linked_in %>
+									<% end %>
+								</div>
+							<% else %>
+								<div class="span4_image">
+									<%= link_to(image_tag('empty.jpg'), user_path(user)) %>
+								</div>
+							<% end %>
+							<div class="title">
+								<h3><%= link_to user.name, user_path(user) %></h3>
 							</div>
-						<% else %>
-							<div class="span4_image">
-								<%= image_tag('empty.jpg') %>
+							<div class="title">
+								<h6><%= user.job_description %></h6>
 							</div>
-						<% end %>
-						<div class="title">
-							<h3><%= user.name %></h3>
+							<p><%= truncate(user.description, length: 350) %></p>
+							<div class="clear"></div>
 						</div>
-						<div class="title">
-							<h6><%= user.job_description %></h6>
-						</div>
-						<p><%= truncate(user.description, length: 350) %></p>
-						<div class="clear"></div>
 					</div>
-				</div>
 				<% end %>
 	  		</div>
   		<% end %>
