--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,18 +10,35 @@
         <%= link_to image_tag('mastercoin_logo.png'), '/', class: "brand", method: :get %>
     		<div class="nav-collapse collapse">
       		<ul class="nav">
-            <li><%= link_to "Features", pages_features_path %></li>
-            <li><%= link_to "Resources", resources_path %></li>
-            <li><%= link_to "Contact", pages_contact_path %></li>
-            <li><%= link_to "News", newsitems_path %></li>
-            <li><%= link_to "Blog", blogs_path %></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Information<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "News", newsitems_path %></li>
+                <li><%= link_to "Features", pages_features_path %></li>
+                <li><%= link_to "Resources", resources_path %></li>
+                <li><%= link_to "Contact", pages_contact_path %></li>
+                <li><a href="http://wiki.mastercoin.org/index.php/Main_Page">Wiki</a></li>
+              </ul>
+            </li>
             <li><%= link_to "The team", users_path %></li>
+            <li><%= link_to "Blog", blogs_path %></li>
+            <li><%= link_to "BudgetPage", '#' %></li>
             <% if user_signed_in? %>
-              <li><%= link_to "Edit Settings", edit_user_registration_path %></li>
-              <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Users<b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "Edit Settings", edit_user_registration_path %></li>
+                  <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+                </ul>
+              </li>
             <% else %>
-              <li><%= link_to 'Log-in', new_user_session_path %></li>
-              <li><%= link_to "Sign up", new_user_registration_path %></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Users<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to 'Log-in', new_user_session_path %></li>
+                <li><%= link_to "Sign up", new_user_registration_path %></li>
+              </ul>
+            </li>
             <% end %>
       		</ul>
       	</div>
