--- a/app/views/pages/features.html.erb
+++ b/app/views/pages/features.html.erb
@@ -1,7 +1,7 @@
 <div id="page-title">
   <div id="page-title-inner">
     <div class="container">
-      <h2><i class="ico-keynote"></i>Features</h2>
+      <h2><i class="ico-keynote"></i>Features of the Mastercoin Protocol</h2>
     </div>
   </div>  
 </div>
@@ -12,53 +12,41 @@
   	<hr>
     <!-- start: Row -->
     <div class="row">
-      <div class="span5">
+      <div class="span9">
 
         <div class="post">
-          <div class="title">
-          <br>
-            <h3>Why does it matter, how is it being developed, and what is the best way to test it out?</h3>
-          </div><br>
-          <p><strong>Why</strong>: Mastercoin enables the Bitcoin eco-system to become more decentralized and operate more in line with its peer to peer nature.</p>
-          <p><strong>How:</strong> The MasterCoin community is engaged in collabrative coding competitions and bounties, all of which are open sourced.</p>
-          <p><strong>What:</strong>Download the experimental code from Github, contribute to the project or test out the experimental clients.</p>
-            <ul>
-              <li>Github: Python MSC Tools, MSC Library for Ruby, MSC Wallet in Ruby, General MSC Coding Tools,</li>
-              <li>Clients: MSC Web Wallet / Explorer and Test out Block Chain Explorer.</li>
-            </ul>
-          <p><br>
-            <strong>Where:</strong> Here are five ways to get some MSC:
-            <ol>
-              <li>Google Doc Order Book with open buy and sell orders. or </li>
-              <li>Contribute to the Development of the Mastercoin open source codebase and earn "Development / Reward Mastercoins".</li>
-              <li>For small test amounts, there is a "Give Away" thread on Bitcoin Talk or</li>
-              <li>For small amounts of real Mastercoins, there is a Mastercoin Faucet.</li>
-              <li>Get your hands on some Mastercoins through the private BuyMastercoins.com</li>
-            </ol>
-          </p>
-          <p><strong>More Details:</strong> For more technical information, please read the MasterCoin Protocol Whitepaper and follow the Mastercoin Blog.</p>
+          <h3>Decentralized Peer to Peer Exchange</h3>
+
+          <p>This is a feature many in the Bitcoin world have been longing for - a way to trade their Bitcoin for Mastercoin or any other digital currency with out having to use a third party.</p>
+          <p>Mastercoin makes this possible by leveraging the Bitcoin blockchain itself as the third party and timestamping service.</p>
+        </div>
+
+        <div class="post">
+          <h3>User Currencies</h3>
+
+          <p>MasterCoins will contain simple tools which will allow anyone to design and release their own currency or commodity, with their own rules, without doing any software development</p>
+        </div>
+
+        <div class="post">
+          <h3>Smart Property</h3>
+
+          <p>MasterCoin supports creating property tokens to be used for titles, deeds, user- backed currencies, and even shares in a company. Whenever property is created, it gets assigned the next available currency ID, so any property can be bought, sold, transferred, and even used for betting, just like other MasterCoin-derived currencies.</p>
         </div>
 
       </div><!-- end: Span9 -->
 
-      <div class="span6 hidden-phone">
+      <div class="span3">
         
         <div class="widget">
-          <div class="title">
-            <h3>Mastercoin Introduction</h3>
-          </div>
-          <div class="flex-video widescreen">
-            <iframe src="http://player.vimeo.com/video/78498192" width="480" height="256" frameborder="0" title="Mastercoin Calls for Developers" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
-          </div>
+          <%= image_tag("slide1.png") %>
         </div>
 
         <div class="widget">
-          <div class="title">
-            <h3>Video Widget</h3>
-          </div>
-          <div class="flex-video widescreen">
-            <iframe src="http://player.vimeo.com/video/78498192" width="480" height="256" frameborder="0" title="Mastercoin Calls for Developers" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
-          </div>
+          <%= image_tag("slide2.png") %>
+        </div>
+
+        <div class="widget">
+          <%= image_tag("slide3.png") %>
         </div>
 
       </div>
