--- a/app/views/newsitems/index.html.erb
+++ b/app/views/newsitems/index.html.erb
@@ -1,3 +1,5 @@
+<%= render 'layouts/facebook_share' %>
+
 <div id="page-title">
   <div id="page-title-inner">
     <div class="container">
@@ -16,14 +18,13 @@
         <% @newsitems.each do |newsitem| %>
 
           <div class="post">
-
-            <span class="post-icon standard"><i class="ico-pen circle"></i></span>
+            <span class="post-icon standard"><%= image_tag newsitem.user.image.url(:medium) %></i></span>
             <div class="post-content">
               <div class="post-title">
-                <h2><%= link_to newsitem.title, newsitem_path(newsitem) %></h2>
+                <h2><%= newsitem.title %></h2>
               </div>
               <div class="post-description">
-                <p><%= newsitem.description %></p>
+                <p><%= raw markdown.render(newsitem.description) %></p>
               </div>
               <div class="post-entry">
                 <%= link_to 'Read More...', newsitem_path(newsitem) %>
@@ -31,7 +32,8 @@
               <div class="post-meta">
                 <span><i class="mini-ico-calendar"></i><%= newsitem.created_at.to_s(:short) %></span>
                 <span><i class="mini-ico-user"></i>By <a href="#"><%= newsitem.user.name %></a></span>
-                <span><i class="mini-ico-comment"></i>Comment(s)<%= link_to newsitem.comments.count, newsitem_path(newsitem) %></span>
+                <span><i class="mini-ico-comment"></i>Comment(s)<%= newsitem.comments.count %></span>
+                <span><div class="fb-share-button" data-href="http://developers.facebook.com/docs/plugins/" data-type="button"></div></span>
               </div>
             </div>
 
@@ -120,3 +122,12 @@
     <hr>
   </div>
 </div>
+
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1&appId=173173886211093";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
