--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,15 +18,17 @@
                 <li><%= link_to "Resources", resources_path %></li>
                 <li><%= link_to "Contact", pages_contact_path %></li>
                 <li><a href="http://wiki.mastercoin.org/index.php/Main_Page">Wiki</a></li>
+                <li><a href="https://trello.com/b/uRutPlms/exchange-project">Trello</a></li>
               </ul>
             </li>
-            <li><%= link_to "The team", users_path %></li>
+            <li><%= link_to "The team", pages_teampage_path %></li>
             <li><%= link_to "Blog", blogs_path %></li>
             <li><%= link_to "BudgetPage", '#' %></li>
             <% if user_signed_in? %>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Users<b class="caret"></b></a>
                 <ul class="dropdown-menu">
+                  <li><%= link_to "Overview", users_path %></li>
                   <li><%= link_to "Edit Settings", edit_user_registration_path %></li>
                   <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
                 </ul>
