Add notification system

--- a/app/assets/stylesheets/ext_lib/style.css.sass
+++ b/app/assets/stylesheets/ext_lib/style.css.sass
@@ -9,21 +9,6 @@
  ** You can buy this theme on WrapBootstrap: https://wrapbootstrap.com/theme/magnus-responsive-business-template-WB0C44S9M
  ** You can find our other themes on: https://bootstrapmaster.com
 
-/* Import Section
- *===================================================================
-@import url(image-path("icons.css"))
-
-/* Icons.
-@import url(image-path("icons-color.css"))
-
-/* Icons.
-@import url(image-path("social-icons.css"))
-
-/* Social Icons
-@import url(image-path("fancybox.css"))
-
-/* Fancybox
-
 html
   -webkit-font-smoothing: antialiased
 
@@ -225,6 +210,9 @@ ul, ol
 
 ul
   list-style: none outside
+
+#news_footer
+  list-style: initial
 
 ol
   list-style: decimal
@@ -991,6 +979,7 @@ input[type="button"]
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.35)
   -moz-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.35)
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.35)
+  min-height: 50px
 
 .testimonials-bg
   background: url(image-path('testimonials-bg.png')) no-repeat
@@ -1632,8 +1621,6 @@ a.buy
 
 .post-content
   padding: 10px 10px 0px 10px
-  margin: 22px
-  margin-left: 100px
 
 .post-icon
   float: left
