--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -26,10 +26,17 @@
             <li><%= link_to "BudgetPage", '#' %></li>
             <% if user_signed_in? %>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Users<b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.name %> 
+                  <% if current_user.notifications.where(read: false).present? %>
+                    <span class="badge"><%= current_user.notifications.where(read: false).count %></span>
+                  <% end %>
+                  <b class="caret"></b>
+                </a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to "Overview", users_path %></li>
-                  <li><%= link_to "Edit Settings", edit_user_registration_path %></li>
+                  <li><%= link_to "All users", users_path %></li>
+                  <li><%= link_to "My profile", user_path(current_user) %></li>
+                  <li><%= link_to "Send notification", new_message_path %></li>
+                  <li><%= link_to "Edit Profile Settings", edit_user_registration_path %></li>
                   <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
                 </ul>
               </li>
